--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,16 @@
     <string name="app_name">Colegio Boneo</string>
     <string name="default_notification_channel_id">default_notification_channel</string>
 
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Iniciar sesión</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Iniciar sesión</string>
+    <string name="error_field_required">Este campo es obligatorio</string>
+    <string name="navigation_drawer_open">Abrir navegación</string>
+    <string name="navigation_drawer_close">Cerrar navegación</string>
     <string name="nav_header_subtitle">email@example.com</string>
-    <string name="action_settings">Settings</string>
     <string name="token_storage_key">AUTH_TOKEN</string>
 
     <string name="logout_confirm_text">¿Desea cerrar sesión?</string>
@@ -24,7 +20,7 @@
     <string name="perfil_academico">Perfil Académico</string>
     <string name="comunicados">Comunicados</string>
     <string name="mi_cuenta">Mi Cuenta</string>
-    <string name="configuracion">Configuración</string>
+    <string name="clases_virtuales">Clases y Evaluaciones</string>
     <string name="eventos">Eventos</string>
     <string name="horarios">Horarios</string>
     <string name="cerrar_sesion">Cerrar sesión</string>
