--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="clases_virtuales">Clases y Evaluaciones</string>
     <string name="eventos">Eventos</string>
     <string name="horarios">Horarios</string>
+    <string name="ayuda">Ayuda</string>
     <string name="cerrar_sesion">Cerrar sesión</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, et pro everti quaeque elaboraret, sea ad numquam bonorum. No nulla appetere nam, mei nonumy feugiat pericula et. Ex probo docendi electram pri. Usu fugit veniam ut, duo saperet inciderint in. Mea ad viris accumsan accommodare.
